service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shopping-mall
  labels:
    app: shopping-mall
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shopping-mall
  template:
    metadata:
      labels:
        app: shopping-mall
    spec:
      containers:
        - name: springboot-app
          image: 194453983284.dkr.ecr.ap-northeast-2.amazonaws.com/reca-ecr:$SHOPPING_VER
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: shopping-mall-service
spec:
  type: LoadBalancer
  selector:
    app: shopping-mall
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
