ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: shopping-mall-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.name: eks-front-group
    alb.ingress.kubernetes.io/group.order: "1"
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: shopping-mall-service
              servicePort: 80
